--- a/index.html
+++ b/index.html
@@ -3,9 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Development</title>
 </head>
 <body>
-    <h1>Firs Repo</h1>
+    <h1>Welcome First Repository</h1>
+    <h2>This page shows my skill</h2>
+    <h3>About FSD</h3>
+    <h4>My name is chirag das</h4>
+    <h5>I am a engineering student</h5>
+    <h6>Pursuing B.tech degree</h6>
 </body>
 </html>
